# aify-openmemory

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  setup.bat  setup.sh
config/: mem0.json  service.example.json
config/examples/: llama-cpp-router.json  minimal-single-llm.json  openclaw-full-stack.json
config/workspace/: AGENTS.md  IDENTITY.md
docs/: AGENT_GUIDE.md
integrations/claude-code/: SKILL.md
integrations/open-webui/: prompt.md  tool.py
integrations/openclaw/: index.ts  openclaw.plugin.json
mcp_local/: sse_server.py
mcp_local/stdio/: .env.example  package.json  server.js
scripts/: add-service.sh  compose-up.sh  test-endpoints.sh
service/: config.py  main.py  requirements.txt
service/brain/: agent.py  tools.py
service/containers/: gpu.py  manager.py  models.py  proxy.py
service/database/: __init__.py  engine.py  models.py  permissions.py  utils.py
service/memory/: categorization.py  client.py  enhanced.py  graph_extraction.py  llm.py
service/routers/: api.py  brain.py  containers.py  health.py
services/: docker-compose.sub-service.example.yml
