[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem0ai"
version = "1.0.5"
description = "Long-term memory for AI Agents (local fork)"
requires-python = ">=3.9,<4.0"
dependencies = [
    "qdrant-client>=1.9.1",
    "pydantic>=2.7.3",
    "openai>=1.90.0",
    "posthog>=3.5.0",
    "pytz>=2024.1",
    "sqlalchemy>=2.0.31",
    "protobuf>=5.29.0,<6.0.0",
]

[tool.hatch.build]
include = ["mem0/**/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["mem0"]
only-include = ["mem0"]
